force-app/main/default/objects/Subtipo_reclamacion__mdt/Subtipo_reclamacion__mdt.object-meta.xml
<CustomObject>
    <label>Subtipo Reclamación</label>
    <pluralLabel>Subtipo Reclamación</pluralLabel>
</CustomObject>