force-app/main/default/objects/Subtipo_reclamacion__mdt/fields/Clase__c.field-meta.xml
<CustomField>
    <fullName>Clase__c</fullName>
    <label>Clase</label>
    <length>30</length>
    <type>Text</type>
</CustomField>