force-app/main/default/objects/Subtipo_reclamacion__mdt/fields/Descripcion_Subtipo_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Subtipo_Reclamacion__c</fullName>
    <label>Descripción Subtipo Reclamación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>