force-app/main/default/objects/Subtipo_reclamacion__mdt/fields/Mensajeria_Subtipo_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>Mensajeria_Subtipo_Reclamacion__c</fullName>
    <label>Mensajería Subtipo Reclamación</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>