force-app/main/default/objects/Subtipo_reclamacion__mdt/fields/Tipo_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Reclamacion__c</fullName>
    <label>Tipo Reclamación</label>
    <referenceTo>Tipo_Reclamacion__mdt</referenceTo>
    <relationshipLabel>Subtipo Reclamación</relationshipLabel>
    <relationshipName>Subtipo_Reclamacion</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>