force-app/main/default/objects/Subtipo_reclamacion__mdt/listViews/TFG_View.listView-meta.xml
<ListView>
    <fullName>TFG_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Descripcion_Subtipo_Reclamacion__c</columns>
    <columns>Mensajeria_Subtipo_Reclamacion__c</columns>
    <columns>Activo__c</columns>
    <columns>Clase__c</columns>
    <columns>Tipo_Reclamacion__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>TFG View</label>
</ListView>